# animator

./: .gitignore  README.md  config.yaml  demo_viewer.py  imgui.ini  main.py  requirements.txt  run_gtk.sh
src/: __init__.py
src/core/: __init__.py  config.py  halpe_keypoints.py  logging.py  mixamo_skeleton.py  timing.py
src/export/: __init__.py  fbx_exporter.py  viewer_bridge.py
src/ik/: __init__.py  solver.py
src/motion/: __init__.py  floor_detector.py  pose_retargeter.py  root_motion.py  skeleton_converter.py  skeleton_solver.py
src/pose/: __init__.py  alphapose_estimator.py  estimator_2d.py  face_tracker.py  halpe_estimator.py  halpe_keypoints.py  hand_tracker.py  pose_smoother.py  reconstructor_3d.py  unified_processor.py
src/ui/: __init__.py  cv_window.py  gtk4_window.py  main_window.py  opengl_viewer.py  skeleton_viewer.py
src/video/: __init__.py  capture.py
viewer/: CMakeLists.txt
viewer/include/: animation.h  animator.h  camera.h  mesh.h  model.h  shader.h  viewer.h
viewer/include/glad/: glad.h
viewer/src/: animation.cpp  animator.cpp  camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  python_bindings.cpp  shader.cpp  viewer.cpp
